--- a/port.html
+++ b/port.html
@@ -77,24 +77,25 @@
       <div>
         <i class="fas fa-code"></i>
         <h2>Web Design</h2>
-        <p>web desiging work if u are inetersted you ccan fdfkdfb hfh d  rare o yoi   fdf efdy d yiue i
-           ue hdfh dkf huf efbd kfhie ddod edheu eu3 h ior wio i hfewfh uirh ifhduf 
+        <p>Web design refers to the design of websites. It usually refers to the user experience aspects of website development rather than software development. 
+            Web design used to be focused on designing websites for desktop browsers; however, since the mid-2010s, 
+            design for mobile and tablet browsers has become ever-increasingly important. 
         </p>
         <a href="#">Learn More</a>
       </div>
       <div>
         <i class="fas fa-crop-alt"></i>
         <h2>UI/UX Design</h2>
-        <p>web desiging work if u are inetersted you ccan fdfkdfb hfh d  rare o yoi   fdf efdy d yiue i
-           jfeur  ddjf fif ddf fehf dsdshfiud fihdid hfuifhe jdhfjdf we fh bdfj fefhfk fkjhf f 
+        <p>When designing a website or an app, the finished product needs to be functional, 
+            intuitive, and aesthetically pleasing. This is where UX and UI design come in. 
         </p>
         <a href="#">Learn More</a>
       </div>
       <div>
         <i class="fab fa-app-store"></i>
         <h2>App Design</h2>
-        <p>web desiging work if u are inetersted you ccan fdfkdfb hfh d  rare o yoi   fdf efdy d yiue i jccjcjcnjxccc
-          cuyhudduddubcdskcx ncbxjcbjdhshsj hbcjdcbjdsdhxcx chbchjcb ccbjbs chbcj bbcsjbcajs asj
+        <p>Mobile app design refers to the creative process of designing the visual and interactive elements of a mobile application.
+            Designers focus not only on branding aesthetics like colors and font types but also on usability and functionality.
         </p>
         <a href="#">Learn More</a>
       </div>
